<resources>
    <string name="app_name">Pedestrian Buttons</string>
    <string name="title_activity_settings">Settings</string>
    <string name="screen_title_main">Device List</string>
    <string name="action_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="voice_header">Voice</string>
    <string name="download_header">Download</string>


    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="voice_settings_title">Voice selection</string>
    <string name="voice_switch_title">Auto read buttonList names after connecting</string>
    <string name="voice_switch_summary">Choose whether or not to automatically read a buttonList\'s name after connecting to it</string>
    <string name="voice_speed_title">Voice speed</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
