<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/voice_header">


        <SwitchPreferenceCompat
            app:key="autovoice"
            app:title="@string/voice_switch_title"
            app:summary="@string/voice_switch_summary"
            app:defaultValue="true" />

        <ListPreference
            app:defaultValue="gbf1"
            app:entries="@array/voice_list"
            app:entryValues="@array/voice_values"
            app:key="voicelist"
            app:title="@string/voice_settings_title"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            app:title="@string/voice_speed_title"
            app:key="voicespeed"
            app:updatesContinuously="true"
            app:showSeekBarValue="false"
            app:seekBarIncrement="1"
            app:defaultValue="10"
            app:summary=""
            app:min="5"
            android:max="50" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/update_header">

        <Preference
            android:title="Check for database update"
            android:key="checkUpdateButton"
            android:summary="If an update is found, it will be applied automatically" />

    </PreferenceCategory>

</PreferenceScreen>
